This is a losing battle, but we should stick to either "login" and "logout" or "logon" and "logoff". Around the time of the usability study, we chose logon/logoff, but now we have some crazy combination of login/logoff so we'll just go all in for the in n out.

--- a/src/gwt/client/account/AccountMessages.properties
+++ b/src/gwt/client/account/AccountMessages.properties
@@ -21,7 +21,6 @@ createTitle = Welcome to Whirled!
 createIntro = Create a Free Whirled Account
 createCoins = Get 1000 free coins when you sign up!
 createAlreadyMember = Already a member?
-#createLoginLink = Please Log In!
 createLoginLink = Log In!
 
 createEmail = Email address:
@@ -104,7 +103,7 @@ resetReady = Click "Change" below to update your password.
 resetReset = Your password has been updated. Please log in above using your new password.
 resetInvalid = The secret code from the email you received is incorrect. Please \
   make sure that your email program did not cut off part of the URL.
-resetLogout = You are currently logged into a Whirled account. Please logoff via "Me -> Logoff" \
+resetLogout = You are currently logged into a Whirled account. Please logout via "Logout" \
   above if you wish to reset your password.
 
 #
