--- a/src/gwt/client/shell/ShellMessages.properties
+++ b/src/gwt/client/shell/ShellMessages.properties
@@ -47,7 +47,7 @@ headerLogon = Log in!
 #
 # StatusPanel
 
-statusLogoff = Logoff
+statusLogoff = Logout
 
 coinsTip = Your current Coins balance
 goldTip = Your current Gold balance
@@ -78,7 +78,7 @@ forgotEmailSent = The email has been sent. Be sure to check your spam folder if 
 #
 # Auth response
 
-tempBan = Your account is temporarily banned and will not be able to logon for \
+tempBan = Your account is temporarily banned and will not be able to login for \
   another {1} hours.  Reason: {0}.
 
 
