--- a/src/gwt/client/stuff/StuffMessages.properties
+++ b/src/gwt/client/stuff/StuffMessages.properties
@@ -6,7 +6,7 @@
 #
 # Global messages
 
-logon = Please logon above to view Your Stuff.
+logon = Please login above to view Your Stuff.
 
 stuffTitle = My {0}
 
