--- a/src/gwt/client/support/SupportMessages.properties
+++ b/src/gwt/client/support/SupportMessages.properties
@@ -6,7 +6,7 @@
 #
 # index
 
-indexLogon = Please logon above to access the support services.
+indexLogon = Please login above to access the support services.
 lackPrivileges = Your account does not have the necessary privileges to view \
   this page.
 
