--- a/src/gwt/client/swiftly/SwiftlyMessages.properties
+++ b/src/gwt/client/swiftly/SwiftlyMessages.properties
@@ -15,7 +15,7 @@ projectsTitle = Projects
 #
 # index
 
-indexLogon = Please logon above to view your Swiftly projects.
+indexLogon = Please login above to view your Swiftly projects.
 
 #
 # ProjectSelectionPanel
