Moved favorites GWT code from "stuff" to "item". Changed ItemGrid to get the current item type from its model.

--- a/src/gwt/client/item/ItemMessages.properties
+++ b/src/gwt/client/item/ItemMessages.properties
@@ -90,3 +90,9 @@ doListHitLimit = This item has already reached that sales target. Either \
 doListListed = Item listed.
 doListUpdated = Listing updated.
 doListRemixed = Item remixed.
+
+#
+# FavoritesPanel
+
+favorites = Favorites
+noFavorites = No Favorites
