--- a/src/gwt/people.gwt.xml.in
+++ b/src/gwt/people.gwt.xml.in
@@ -10,12 +10,13 @@
   <source path="com/threerings/msoy/fora/gwt"/>
   <source path="com/threerings/msoy/group/data/all"/>
   <source path="com/threerings/msoy/group/gwt"/>
-  <source path="com/threerings/msoy/stuff/gwt"/>
+  <source path="com/threerings/msoy/item/gwt"/>
   <source path="com/threerings/msoy/mail/gwt"/>
   <source path="com/threerings/msoy/badge/data/all"/>
   <source path="com/threerings/msoy/badge/gwt"/>
   <source path="com/threerings/msoy/person/gwt"/>
   <source path="com/threerings/msoy/profile/gwt"/>
+  <source path="com/threerings/msoy/stuff/gwt"/>
 
   <source path="client/comment"/>
   <source path="client/mail"/>
@@ -24,7 +25,7 @@
   <source path="client/people"/>
   <source path="client/editem"/>
   <source path="client/remix"/>
-  <source path="client/stuff"/>
+  <source path="client/item"/>
 
   <public path="public/people"/>
   <stylesheet src="/css/person.css"/>
