A whole bunch of wiki links for the stamp text descriptions.

--- a/src/gwt/client/shell/DynamicMessages.properties
+++ b/src/gwt/client/shell/DynamicMessages.properties
@@ -226,36 +226,60 @@ badge_6e67007d = Character Designer
 
 badgeDesc0_3aa0bef4 = Spend 3 total hours exploring rooms and games in Whirled!
 badgeDescN_3aa0bef4 = Log {0} hours in Whirled!
-badgeDesc0_c4fd834b = Make a friend in Whirled!
-badgeDescN_c4fd834b = Make {0} friends!
-badgeDesc0_3ca5a071 = Give a creator feedback on a shop item by commenting on it!
-badgeDescN_3ca5a071 = Give {0} comments to content creators!
+badgeDesc0_c4fd834b = Make a <a href="http://wiki.whirled.com/Friend">friend</a> in Whirled!
+badgeDescN_c4fd834b = Make {0} <a href="http://wiki.whirled.com/Friend">friends!</a>
+badgeDesc0_3ca5a071 = Give a creator feedback on a shop item by \
+<a href="http://wiki.whirled.com/Comment">commenting</a> on it!
+badgeDescN_3ca5a071 = Give {0} <a href="http://wiki.whirled.com/Comment">comments</a> to content \
+creators!
 badgeDesc0_e6a0e95b = Win a multiplayer game!
 badgeDescN_e6a0e95b = Win {0} multiplayer games!
-badgeDesc0_8a19eba3 = Earn a trophy in a game!
-badgeDescN_8a19eba3 = Earn {0} game trophies!
-badgeDesc0_7f70d917 = Play a game to win coins and earn trophies!
+badgeDesc0_8a19eba3 = Earn a <a href="http://wiki.whirled.com/Trophies">trophy</a> in a game!
+badgeDescN_8a19eba3 = Earn {0} game <a href="http://wiki.whirled.com/Trophies">trophies</a>!
+badgeDesc0_7f70d917 = Play a game to win <a href="http://wiki.whirled.com/Coins">coins</a> and earn
+ <a href="http://wiki.whirled.com/Trophies">trophies!</a>
 badgeDescN_7f70d917 = Play {0} game sessions!
 badgeDesc0_ac95aafe = Come back and check out Whirled tomorrow!
 badgeDescN_ac95aafe = Check out Whirled {0} days in a row!
-badgeDesc0_fa58270b = Bring a real world friend into Whirled!
-badgeDescN_fa58270b = Bring {0} of your real world friends into Whirled!
-badgeDesc0_e6af01a4 = Check an item in the shop and rate it!
-badgeDescN_e6af01a4 = Rate {0} items in the shop!
-badgeDesc0_1923c147 = Buy a shop item, like a new avatar or a toy for your room!
-badgeDescN_1923c147 = Spend {0} coins in the shop!
-badgeDescN_26873aba = Earn {0} coins in total shop sales!
+badgeDesc0_fa58270b = Bring a <a href="http://wiki.whirled.com/Tutorials:_Find_Friends">real world \
+friend</a> into Whirled!
+badgeDescN_fa58270b = Bring {0} of your <a href="http://wiki.whirled.com/Tutorials:_Find_Friends">\
+real world friends</a> into Whirled!
+badgeDesc0_e6af01a4 = Check an item in the <a href="http://wiki.whirled.com/Shop">shop</a> and \
+rate it!
+badgeDescN_e6af01a4 = Rate {0} items in the <a href="http://wiki.whirled.com/Shop">shop!</a>
+badgeDesc0_1923c147 = Buy a <a href="http://wiki.whirled.com/Shop">shop</a> item, like a new \
+<a href="http://wiki.whirled.com/Avatar">avatar</a> or a <a href="http://wiki.whirled.com/Toy">\
+toy</a> for your <a href="http://wiki.whirled.com/Room">room</a>!
+badgeDescN_1923c147 = Spend {0} coins in the <a href="http://wiki.whirled.com/Shop">shop!</a>
+badgeDescN_26873aba = Earn {0} <a href="http://wiki.whirled.com/Coins">coins</a> in total shop \
+sales!
 badgeDesc0_325f4c9 = Get a solid rating of over 4 stars on one of your listed items!
 badgeDescN_325f4c9 = Sell {0} items in the shop with a solid rating of 4 or more stars!
-badgeDesc0_117171d7 = Upload a Backdrop to Whirled!
-badgeDesc1_117171d7 = List a Backdrop in the shop!
-badgeDesc2_117171d7 = Sell a Backdrop in the shop!
-badgeDesc0_f0c035cd = Upload a piece of Furniture to Whirled!
-badgeDesc1_f0c035cd = List a piece of Furniture in the shop!
-badgeDesc2_f0c035cd = Sell a piece of Furniture in the shop!
-badgeDesc0_6e67007d = Upload an Avatar to Whirled!
-badgeDesc1_6e67007d = List an Avatar in the shop!
-badgeDesc2_6e67007d = Sell an Avatar in the shop!
+badgeDesc0_117171d7 = <a href="http://wiki.whirled.com/Create_backdrops">Upload</a> a \
+<a href="http://wiki.whirled.com/Backdrop">Backdrop</a> to Whirled!
+badgeDesc1_117171d7 = <a href="http://wiki.whirled.com/Create_backdrops">List</a> a \
+<a href="http://wiki.whirled.com/Backdrop">Backdrop</a> in the \
+<a href="http://wiki.whirled.com/Shop">shop!</a>
+badgeDesc2_117171d7 = <a href="http://wiki.whirled.com/Create_backdrops">Sell</a> a \
+<a href="http://wiki.whirled.com/Backdrop">Backdrop</a> in the \
+<a href="http://wiki.whirled.com/Shop">shop!</a>
+badgeDesc0_f0c035cd = <a href="http://wiki.whirled.com/Create_furniture">Upload</a> a piece of \
+<a href="http://wiki.whirled.com/Furniture">Furniture</a> to Whirled!
+badgeDesc1_f0c035cd = <a href="http://wiki.whirled.com/Create_furniture">List</a> a piece of \
+<a href="http://wiki.whirled.com/Furniture">Furniture</a> in the \
+<a href="http://wiki.whirled.com/Shop">shop!</a>
+badgeDesc2_f0c035cd = <a href="http://wiki.whirled.com/Create_furniture">Sell</a> a piece of \
+<a href="http://wiki.whirled.com/Furniture">Furniture</a> in the \
+<a href="http://wiki.whirled.com/Shop">shop!</a>
+badgeDesc0_6e67007d = <a href="http://wiki.whirled.com/Create_avatars">Upload</a> an \
+<a href="http://wiki.whirled.com/Avatar">Avatar</a> to Whirled!
+badgeDesc1_6e67007d = <a href="http://wiki.whirled.com/Create_avatars#Sell.21">List</a> an \
+<a href="http://wiki.whirled.com/Avatar">Avatar</a> in the <a href="http://wiki.whirled.com/Shop">\
+shop!</a>
+badgeDesc2_6e67007d = <a href="http://wiki.whirled.com/Create_avatars#Sell.21">Sell</a> an \
+<a href="http://wiki.whirled.com/Avatar">Avatar</a> in the <a href="http://wiki.whirled.com/Shop">\
+shop!</a>
 
 #
 # Passport stamp categories
