Strip out whirled auto-creation for games.  Still todo: store gameId on whirleds and display game on whirled details.

--- a/src/gwt/client/editem/EditemMessages.properties
+++ b/src/gwt/client/editem/EditemMessages.properties
@@ -50,7 +50,7 @@ avatarTip = Avatar as seen in the World
 
 errAvatarNotFlash = Avatar media must be flash (SWF) files. If you''d like to use \
   a regular image, please use the Easy Image Avatar, and remix it with your image. \
-  See here for more details: http://www.whirled.com/#shop-l_5_1609 
+  See here for more details: http://www.whirled.com/#shop-l_5_1609
 
 #
 # DocumentEditor
@@ -74,7 +74,7 @@ furniHotSpotTip = This is the pixel offset from the upper left of the furniture 
 gameLabel = Game Media
 gameTip = The SWF file for your game
 
-errGameNotFlash = Game media must be flash (SWF) files. 
+errGameNotFlash = Game media must be flash (SWF) files.
 
 gameServerHeadingTip = The following fields are only needed for games that employ a server agent
 gameServerMediaLabel = Server Agent Code
@@ -99,8 +99,7 @@ gameAVRG = AVR Game?
 
 gameWhirledLabel = Whirled
 gameWhirledTip = The Whirled associated with this game (you must be a manager)
-gameWhirledSelectNew = NONE - Create a new Whirled for this game
-gameWhirledCreating = A new Whirled will be created for this game: {0} Whirled.
+gameWhirledNone = None
 
 errInvalidShot = The screenshot image must be a GIF, PNG or JPG and exactly {0}x{1} pixels.
 
@@ -125,7 +124,7 @@ errPhotoNotImage = Images must be a GIF, PNG or JPG.
 #
 # ToyEditor
 
-errToyNotFlash = Toy media must be flash (SWF) files.  
+errToyNotFlash = Toy media must be flash (SWF) files.
 
 #
 # VideoEditor
