OK, logon/logoff it is. We have some giant imagery in Flash that says Logon.

--- a/src/gwt/client/account/AccountMessages.properties
+++ b/src/gwt/client/account/AccountMessages.properties
@@ -21,10 +21,10 @@ createTitle = Welcome to Whirled!
 createIntro = Create a Free Whirled Account
 createCoins = Get 1000 free coins when you sign up!
 createAlreadyMember = Already a member?
-createLoginLink = Log In!
+createLoginLink = Logon!
 
 createEmail = Email address:
-createEmailTip = You''ll use your email address to log in. We care about our players \
+createEmailTip = You''ll use your email address to logon. We care about our players \
   and will never sell or share your address.
 
 createRealName = Real name (optional):
@@ -36,7 +36,7 @@ createDateOfBirthTip = You must be at least 13 years old to play in Whirled.
   
 createPassword = Password:
 createPasswordTip = Don''t ever tell anyone your password, not even us! \
-  Only enter your password into the box used to log in.
+  Only enter your password into the box used to logon.
 
 createConfirm = Confirm password:
 createConfirmTip = Enter your password again to make sure you typed it in correctly.
@@ -71,8 +71,8 @@ creatingAccount = Signing up...
 #
 # Login page
 
-loginPageTitle = Log In
-loginPageSubmit = Log In
+loginPageTitle = Logon
+loginPageSubmit = Logon
 
 #
 # OptOutPanel
@@ -89,7 +89,7 @@ optOutSuccessful = {0} will no longer receive email from whirled.com
 # ResetPasswordPanel
 
 resetIntro = Enter and confirm a new password for your account below. You can \
-  simply log in above if you don''t wish to change your password.
+  simply logon above if you don''t wish to change your password.
 
 resetPassword = Password:
 resetConfirm = Confirm:
@@ -100,10 +100,10 @@ resetMissingConfirm = Re-enter the password to confirm it.
 resetPasswordMismatch = The passwords you''ve entered do not match.
 resetReady = Click "Change" below to update your password.
 
-resetReset = Your password has been updated. Please log in above using your new password.
+resetReset = Your password has been updated. Please logon above using your new password.
 resetInvalid = The secret code from the email you received is incorrect. Please \
   make sure that your email program did not cut off part of the URL.
-resetLogout = You are currently logged into a Whirled account. Please logout via "Logout" \
+resetLogout = You are currently logged into a Whirled account. Please logoff via "Logoff" \
   above if you wish to reset your password.
 
 #
