--- a/src/gwt/client/games/GamesMessages.properties
+++ b/src/gwt/client/games/GamesMessages.properties
@@ -105,7 +105,7 @@ gameTrophyEarnedOn = Earned on {0}
 #
 # TopRankingPanel
 
-trpLogin = Login to see your rankings.
+trpLogin = Logon to see your rankings.
 trpLoading = Loading ratings...
 
 trpMyNoRankings = You and your friends have no rankings in this game.
