--- a/src/gwt/client/me/MeMessages.properties
+++ b/src/gwt/client/me/MeMessages.properties
@@ -72,7 +72,7 @@ editEmail = Email address:
 editEmailReady = Click ''Update'' to update your email address.
 
 emailUpdated = Email address updated. Remember, this new address must be used \
-  next time you log into Whirled.
+  next time you log onto Whirled.
 
 editEPrefsHeader = Update Email Preferences
 
@@ -98,7 +98,7 @@ passwordUpdated = Your password has been updated.
 editPickPermaNameHeader = Pick Your Permaname
 editPermaName = Permaname:
 editPermaNameTip = <b>Note:</b> your Permaname can never be changed once it is set.<br> \
-  You must create a Permaname to log into the Wiki and the Forums.
+  You must create a Permaname to log onto the Wiki and the Forums.
 
 editPermaShort = Your Permaname must be at least four characters long.
 editPermaLong = Your Permaname cannot be more than twelve characters long.
@@ -107,7 +107,7 @@ editPermaInvalid = Your Permaname can only contain letters, numbers and \
 editPermaReady = Click ''Set'' to configure your Permaname.
 
 permaNameConfigured = Your Permaname has been configured. Note: you must use \
-  your Permaname to log into the Forums and the Wiki. We plan to fix this in \
+  your Permaname to log onto the Forums and the Wiki. We plan to fix this in \
   the future.
 
 #
