--- a/src/gwt/client/people/PeopleMessages.properties
+++ b/src/gwt/client/people/PeopleMessages.properties
@@ -6,14 +6,14 @@
 #
 # Global bits
 
-profileLogin = Please log in to view your profile.
+profileLogin = Please logon to view your profile.
 
 seeAll = See All
 
 #
 # index
 
-indexLogon = Log in to view your profile.
+indexLogon = Logon to view your profile.
 
 #
 # SearchMembersPanel
