--- a/src/gwt/client/shell/ServerMessages.properties
+++ b/src/gwt/client/shell/ServerMessages.properties
@@ -22,7 +22,7 @@ no_such_user = That address is not registered with the system. \
   Please ensure you entered it correctly.
 invalid_password = The password you entered does not match the one on file \
   for the account.
-session_expired = Your session has expired. Please login again.
+session_expired = Your session has expired. Please logon again.
 banned = Your account is banned.
 
 invalid_email = The address entered is not valid. A valid email address \
