--- a/src/gwt/client/shell/ShellMessages.properties
+++ b/src/gwt/client/shell/ShellMessages.properties
@@ -23,7 +23,7 @@ edit = Edit
 #
 # Global messages
 
-noGuests = Please log in above to access the Whirled.
+noGuests = Please logon above to access the Whirled.
 bareTitle = Whirled
 windowTitle = Whirled - {0}
 
@@ -42,12 +42,12 @@ menuShop = Shop
 menuHelp = Help
 
 headerSignup = Join now!
-headerLogon = Log in!
+headerLogon = Logon!
 
 #
 # StatusPanel
 
-statusLogoff = Logout
+statusLogoff = Logoff
 
 coinsTip = Your current Coins balance
 goldTip = Your current Gold balance
@@ -78,7 +78,7 @@ forgotEmailSent = The email has been sent. Be sure to check your spam folder if 
 #
 # Auth response
 
-tempBan = Your account is temporarily banned and will not be able to login for \
+tempBan = Your account is temporarily banned and will not be able to logon for \
   another {1} hours.  Reason: {0}.
 
 
