Display a (subtle) link to the game on whirled details and adjust things to make room for the larger snapshots.

--- a/src/gwt/client/whirleds/WhirledsMessages.properties
+++ b/src/gwt/client/whirleds/WhirledsMessages.properties
@@ -86,6 +86,7 @@ detailMembers = Members
 detailEdit = Edit this Whirled
 detailReadCharter = Read Charter
 detailManageRooms = Manage Rooms
+detailPlayGame = Play the Game!
 
 detailJoin = Join this Whirled
 detailJoinPrompt = Joining will add this Whirled''s Discussions to your \
