Broke favorites grid out into its own class. Added dynamic title to the favorites grid.
Added missing catch.

--- a/src/gwt/client/item/ItemMessages.properties
+++ b/src/gwt/client/item/ItemMessages.properties
@@ -36,6 +36,10 @@ removeAvatar = Remove avatar
 
 inUse = In use
 notInUse = Not in use
+
+#
+# FavoriteIndicator
+
 favorite = Favorite
 
 #
@@ -92,7 +96,9 @@ doListUpdated = Listing updated.
 doListRemixed = Item remixed.
 
 #
-# FavoritesPanel
+# FavoritesGrid
 
+favoriteTitle = Favorite {0}
+allFavorites = All Favorites
 favorites = Favorites
 noFavorites = No Favorites
