--- a/etc/msoy-server.properties.dist
+++ b/etc/msoy-server.properties.dist
@@ -106,6 +106,11 @@ server_root = /export/msoy
 # announce_group_id = 0
 
 #
+# Configures the group used for any game that has no group
+
+# default_game_group_id = 0
+
+#
 # Defines the directory into which uploaded media will be stored (in addition
 # to S3, if that is enabled) and the URL from which media will be downloaded.
 # These URLs (but not the dir) *must* end in a slash.
