--- a/src/gwt/client/me/MeMessages.properties
+++ b/src/gwt/client/me/MeMessages.properties
@@ -36,6 +36,8 @@ friendPlaying = playing {0}
 #
 # WhatsNextPanel
 
+nextHeader = What''s Next?
+
 nextPlay = Play Games!
 nextPlayTip = Earn coins, win trophies and play games with friends.
 
@@ -54,6 +56,11 @@ nextFind = Find someone on Whirled:
 nextFindTip = Search by real name, Whirled name or email address.
 
 nextFriendClick = Click a friend to visit!
+
+nextPassportTip = Click "GO" on these Whirled Passport stamps to go right to the fun, and earn \
+coins at the same time!
+nextBadgesSeeAll = See all
+nextBadgesTitle = Try some more Whirled fun!
 
 #
 # EditAccountPanel
