Added favorite count to listing details. Moved FavoritesPanel to shop package. Moved FavoritesPanel to shop package.

--- a/src/gwt/client/shop/ShopMessages.properties
+++ b/src/gwt/client/shop/ShopMessages.properties
@@ -84,8 +84,10 @@ boughtAudioUsage = Click above to use your new song as the soundtrack for this r
 boughtPetUsage = Click above to add your new pet to this room!
 boughtOtherUsage = Click above to add your new item to this room!
 
+favoritesCount = Favorites:
+
 #
-# FavoritesPanel
+# ShopPage
 
 myFavoritesTitle = My Favorites
 favoritesTitle = Favorites
