When someone creates an account for the first time, briefly display a confirmation message, along with a wee little AdWords tracking iframe.
This iframe business is a little brittle, but it's the way they officially recommend doing 
tracking from dynamic pages; their tracker relies on both a beacon and their own JS.

cf. https://adwords.google.com/support/bin/answer.py?answer=27338&topic=60

WRLD-274

--- a/src/gwt/client/account/AccountMessages.properties
+++ b/src/gwt/client/account/AccountMessages.properties
@@ -67,6 +67,7 @@ createMustAgreeTOS = You must agree to the Terms of Service in order to sign up.
 createNotThirteen = You must be at least 13 years old to use Whirled.
 
 creatingAccount = Signing up...
+creatingDone = Logging in for the first time...
 
 #
 # Login page
