Sort by remixability in the shop catalog.

--- a/src/gwt/client/shop/ShopMessages.properties
+++ b/src/gwt/client/shop/ShopMessages.properties
@@ -32,6 +32,7 @@ sortByPriceAsc = Lowest Price
 sortByPriceDesc = Highest Price
 sortByPurchases = Purchases
 sortByNewAndHot = New & Hot
+sortByRemixable = Remixable
 
 catalogNoMatch = No {0} items match the query: {1}
 catalogNoTag = No {0} items match the tag: {1}
