Be less verbose.

--- a/src/gwt/client/people/PeopleMessages.properties
+++ b/src/gwt/client/people/PeopleMessages.properties
@@ -70,7 +70,7 @@ interestsEdit = Edit Info
 # FavoritesBlurb
 
 favoritesTitle = Recent Favorites
-seeMoreFavorites = See more of {0}''s favorites...
+seeMoreFavorites = See all...
 
 #
 # FriendsBlurb
