Be a little nicer to people that happen upon a bogus passport URL

--- a/src/gwt/client/me/MeMessages.properties
+++ b/src/gwt/client/me/MeMessages.properties
@@ -129,3 +129,4 @@ passportNextBar = Go for these new stamps!
 passportStampsTitle = {0}''s Passport Stamps
 passportFinishedSeries = Earned {0}
 passportEmptyCategory = {0} has not earned any {1} stamps yet.
+passportPlayerNotFound = The player was not found.
