Add a stamps blurb to the profile page with a "see all" link.  None of the players on my dev server have 6+ stamps, and I need to catch the train, so I'll check this out on dev tomorrow to make sure it works with a larger stamp collection

--- a/src/gwt/client/people/PeopleMessages.properties
+++ b/src/gwt/client/people/PeopleMessages.properties
@@ -109,6 +109,10 @@ haveNoGroups = Sorry pardner. You don''t have invite privileges for any Whirleds
 trophiesTitle = Game Trophies
 
 #
+# StampsBlurb
+stampsTitle = Passport Stamps
+
+#
 # CommentsBlurb
 
 commentsTitle = Comment Wall
