Open a game's whirled in the flash client any time the game lobby loads without being in a room.   Todo: games with no group.

--- a/src/gwt/client/games/GamesMessages.properties
+++ b/src/gwt/client/games/GamesMessages.properties
@@ -49,7 +49,7 @@ ipInstructionsTooLong = Your instructions are too long. Please shorten them by \
 
 # GameBitsPanel
 
-bitsWhirledLink = Visit the game''s official Whirled
+bitsWhirledLink = Discuss this game in its Whirled
 bitsGenre = Genre:
 bitsPlayers = Players:
 bitsAvgDuration = Avg. Time:
