Included member name in the favorites page title. Cleaned up argument handling in FavoritesPanel.

--- a/src/gwt/client/shop/ShopMessages.properties
+++ b/src/gwt/client/shop/ShopMessages.properties
@@ -88,10 +88,10 @@ boughtOtherUsage = Click above to add your new item to this room!
 favoritesCount = Favorites:
 
 #
-# ShopPage
+# FavoritesPanel
 
+memberFavorites = {0}''s Favorites
 myFavoritesTitle = My Favorites
-favoritesTitle = Favorites
 
 #
 # FavoritesSideBar
