Good thing I tested that anyway, it seems that the file ends up being hosted at ungrounded.net.

--- a/pages/crossdomain.xml.in
+++ b/pages/crossdomain.xml.in
@@ -3,6 +3,7 @@
    <allow-access-from domain="first.whirled.com" to-ports="*"/>
    <allow-access-from domain="*.kongregate.com" to-ports="*"/>
    <allow-access-from domain="*.newgrounds.com" to-ports="*"/>
+   <allow-access-from domain="*.ungrounded.net" to-ports="*"/>
 </cross-domain-policy>
 <!--
   Notice:
