--- a/src/gwt/client/shop/ShopMessages.properties
+++ b/src/gwt/client/shop/ShopMessages.properties
@@ -97,7 +97,7 @@ memberFavorites = {0}''s Favorites
 favoriteTitle = Favorite {0}
 allFavorites = All Favorites
 favorites = Favorites
-noFavorites = This person has not favorited any items of this type.
+noFavorites = They have no favorite items of this type.
 
 #
 # FavoritesSideBar
