A dummy transactions page

--- a/src/gwt/client/shop/ShopMessages.properties
+++ b/src/gwt/client/shop/ShopMessages.properties
@@ -102,3 +102,8 @@ noFavorites = They have no favorite items of this type.
 
 favoritesSideBarTitle = Show:
 allItems = All
+
+#
+# Transactions/sales
+
+transactionsTitle = Transactions
