Made rooms page publicly viewable from a link on the profile page.  Moved me.MyRoomsPanel to people.RoomsPanel and made it display all rooms if viewing your own, and only unlocked public rooms if viewing someone else's.  It was decided that determining which rooms could be seen based on "friend" status was too weighty to implement at this time.

--- a/src/gwt/client/people/PeopleMessages.properties
+++ b/src/gwt/client/people/PeopleMessages.properties
@@ -28,6 +28,14 @@ profileOtherTitle = {0}''s Profile
 profileSelfTitle = My Profile
 
 #
+# RoomsPanel
+
+roomsTitle = {0}''s Rooms
+roomsMineTitle = My Rooms
+roomsIntro = These are all of {0}''s public rooms. Click a room to enter it.
+roomsMineIntro = These are all of your rooms. Click a room to enter it.
+
+#
 # ProfileBlurb
 
 profileLoadFailed = Missing profile details.
@@ -59,6 +67,7 @@ inviteFriend = Add as Friend
 sendMail = Send Mail
 visitHome = Visit Home
 browseItems = Browse Items
+seeRooms = See {0}''s Rooms
 
 #
 # InterestsBlurb
