Put the rooms link below the visit home link. Removed the member's name from the link text. We're on their profile, the name is right there, and the layout is going to break when it comes time to "See why is my name so long's rooms".

--- a/src/gwt/client/people/PeopleMessages.properties
+++ b/src/gwt/client/people/PeopleMessages.properties
@@ -67,7 +67,7 @@ inviteFriend = Add as Friend
 sendMail = Send Mail
 visitHome = Visit Home
 browseItems = Browse Items
-seeRooms = See {0}''s Rooms
+seeRooms = View Rooms
 
 #
 # InterestsBlurb
