"Whirled" is the site... we renamed "group" to be "whirled", I think that we should use case to denote which one we mean.  In this case, the game has a "whirled", not a "Whirled"

--- a/src/gwt/client/games/GamesMessages.properties
+++ b/src/gwt/client/games/GamesMessages.properties
@@ -49,7 +49,7 @@ ipInstructionsTooLong = Your instructions are too long. Please shorten them by \
 
 # GameBitsPanel
 
-bitsWhirledLink = Discuss this game in its Whirled
+bitsWhirledLink = Discuss this game in its whirled
 bitsGenre = Genre:
 bitsPlayers = Players:
 bitsAvgDuration = Avg. Time:
