Changed "See all..." to "See All" for consistency with the "See All" message used for Passport, Trophies, etc.

--- a/src/gwt/client/people/PeopleMessages.properties
+++ b/src/gwt/client/people/PeopleMessages.properties
@@ -79,7 +79,7 @@ interestsEdit = Edit Info
 # FavoritesBlurb
 
 favoritesTitle = Recent Favorites
-seeMoreFavorites = See all...
+seeMoreFavorites = See All
 
 #
 # FriendsBlurb
