Started breaking out the Stuff page.  First step: reformat the existing #stuff page.  Note the various TODOs that still need doing, including the search feature which is styled but hidden.  Next step will be to write search feature functionality, then replace the Friends tab with the new Stuff tab, and remove the stuff header from Me.

--- a/src/gwt/me.gwt.xml.in
+++ b/src/gwt/me.gwt.xml.in
@@ -4,9 +4,16 @@
   <source path="com/threerings/msoy/badge/data/all"/>
   <source path="com/threerings/msoy/badge/gwt"/>
   <source path="com/threerings/msoy/person/gwt"/>
-
+  
   <source path="client/person"/>
   <source path="client/me"/>
+
+  <!-- TODO: remove SOON when stuff is in its own tab and stuff bar is gone from #me --> 
+  <source path="com/threerings/msoy/stuff/gwt"/>
+  <source path="client/stuff"/>
+  <inherits name="editem"/>
+  <source path="client/remix"/>
+  <!-- END TODO remove -->
 
   <public path="public/me"/>
   <stylesheet src="/css/person.css"/>
