Make the grammar here work for Me or someone else.

--- a/src/gwt/client/shop/ShopMessages.properties
+++ b/src/gwt/client/shop/ShopMessages.properties
@@ -94,7 +94,7 @@ memberFavorites = {0}''s Favorites
 favoriteTitle = Favorite {0}
 allFavorites = All Favorites
 favorites = Favorites
-noFavorites = They have no favorite items of this type.
+noFavorites = No favorite items of this type.
 
 #
 # FavoritesSideBar
