Explain how to find the prize shop id until we have a fancier interface.

--- a/src/gwt/client/editem/EditemMessages.properties
+++ b/src/gwt/client/editem/EditemMessages.properties
@@ -207,8 +207,10 @@ prizePleaseSelectType = Please select a type for your target item.
 prizePleaseSelectTarget = Please enter the shop id of your target item.
 
 prizeTargetId = Prize Shop ID
-prizeTargetIdTip = The shop ID of the prize item. This interface is temporary \
-  and we''ll provide something fancier soon.
+prizeTargetIdTip = Navigate in the Shop to the item you want to award and the URL will \
+  contain the shop ID as the last number in the URL. \
+  For example: http://www.whirled.com/#shop-l_5_347 means that 347 is the shop ID. \
+  You must of course be the creator of the shop item or it won''t work.
 
 #
 # PropEditor
