Have the world server create an AMQP connection on init, if it's configured in the properties.  If not, use a no-op implementation.

--- a/.classpath
+++ b/.classpath
@@ -112,5 +112,6 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/underwire"/>
 	<classpathentry kind="lib" path="etc"/>
 	<classpathentry kind="lib" path="extlibs/java/aopalliance.jar"/>
+	<classpathentry kind="lib" path="extlibs/java/rabbitmq-client.jar"/>
 	<classpathentry kind="output" path="dist/classes"/>
 </classpath>
