Adding dynamic MessagesLookup to msoy. This will eventually phase out shell.DynamicMessages... 'rebind' packages are special, in that they're needed by GWT to do compile-time generating, but the generators themselves don't actually end up in the client, so handle them seperately in build.xml.

--- a/src/gwt/client/shop/ShopMessages.properties
+++ b/src/gwt/client/shop/ShopMessages.properties
@@ -105,5 +105,9 @@ allItems = All
 #
 # Transactions/sales
 
-transactionsTitle = Transactions
+transactionsTitle = Recent Transactions
 transactionsNone = No recent transactions!
+salesTitle = Recent Sales
+salesNone = No recent sales!
+
+itemBought = Purchased {0}
