--- a/pages/index.html.in
+++ b/pages/index.html.in
@@ -6,7 +6,7 @@
         name="description"/>
   <meta content="games,friends,explore,chat,shop,create,whirled" name="keywords"/>
   <script type="text/javascript">
-    if (!@DEV_DEPLOYMENT@ && document.location.host != "@SERVER_URL_HOST_PORT@") {
+    if (document.location.host.indexOf("@SERVER_URL_HOST@") != 0) {
         document.location = "@SERVER_URL@";
     }
   </script>
